# PyLambdaTasks

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.yml  pyproject.toml
develop/: api.py  handler.py  tasks.py
